--- a/src/main/java/org/dam/Views/FormPanel.form
+++ b/src/main/java/org/dam/Views/FormPanel.form
@@ -239,6 +239,8 @@
         <rowspec value="top:4dlu:noGrow"/>
         <rowspec value="center:25px:noGrow"/>
         <rowspec value="top:6dlu:noGrow"/>
+        <rowspec value="top:4dlu:noGrow"/>
+        <rowspec value="center:max(d;4px):noGrow"/>
         <rowspec value="top:34px:noGrow"/>
         <rowspec value="top:4dlu:noGrow"/>
         <rowspec value="center:60px:noGrow"/>
@@ -265,7 +267,7 @@
         <children>
           <component id="ac621" class="javax.swing.JComboBox" binding="cb_marca">
             <constraints>
-              <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
               <forms defaultalign-vert="false"/>
             </constraints>
             <properties/>
@@ -280,16 +282,6 @@
               <text value="Marca"/>
             </properties>
           </component>
-          <component id="a32e6" class="javax.swing.JLabel" binding="lb_material">
-            <constraints>
-              <grid row="2" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-              <forms defaultalign-horz="false"/>
-            </constraints>
-            <properties>
-              <foreground color="-16514044"/>
-              <text value="Material"/>
-            </properties>
-          </component>
           <component id="cbc67" class="javax.swing.JLabel" binding="lb_fecha">
             <constraints>
               <grid row="2" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
@@ -302,25 +294,14 @@
           </component>
           <component id="18106" class="com.github.lgooddatepicker.components.DatePicker" binding="dp_fecha">
             <constraints>
-              <grid row="4" column="6" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="6" column="6" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
               <forms/>
             </constraints>
             <properties/>
           </component>
-          <component id="cfc36" class="javax.swing.JCheckBox" binding="chk_exterior">
-            <constraints>
-              <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-              <forms top="0" left="80" bottom="0" right="0"/>
-            </constraints>
-            <properties>
-              <background color="-5267062"/>
-              <foreground color="-16514044"/>
-              <text value="Exterior"/>
-            </properties>
-          </component>
           <component id="f39d" class="javax.swing.JButton" binding="btn_create">
             <constraints>
-              <grid row="6" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="8" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
               <forms defaultalign-horz="false"/>
             </constraints>
             <properties>
@@ -330,7 +311,7 @@
           </component>
           <component id="dc342" class="javax.swing.JButton" binding="btn_clear">
             <constraints>
-              <grid row="6" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="8" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
               <forms defaultalign-horz="false"/>
             </constraints>
             <properties>
@@ -340,7 +321,7 @@
           </component>
           <scrollpane id="9477a">
             <constraints>
-              <grid row="3" column="4" row-span="3" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <grid row="3" column="4" row-span="5" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
               <forms defaultalign-horz="false" defaultalign-vert="false"/>
             </constraints>
             <properties/>
@@ -352,6 +333,27 @@
               </component>
             </children>
           </scrollpane>
+          <component id="a32e6" class="javax.swing.JLabel" binding="lb_material">
+            <constraints>
+              <grid row="1" column="4" row-span="2" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+              <forms defaultalign-horz="false"/>
+            </constraints>
+            <properties>
+              <foreground color="-16514044"/>
+              <text value="Material"/>
+            </properties>
+          </component>
+          <component id="cfc36" class="javax.swing.JCheckBox" binding="chk_exterior">
+            <constraints>
+              <grid row="8" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <forms top="0" left="80" bottom="0" right="0"/>
+            </constraints>
+            <properties>
+              <background color="-5267062"/>
+              <foreground color="-16514044"/>
+              <text value="Exterior"/>
+            </properties>
+          </component>
         </children>
       </grid>
       <grid id="4de5" layout-manager="FormLayout">
@@ -374,7 +376,7 @@
             <properties>
               <font name="Consolas" size="18" style="0"/>
               <foreground color="-1769472"/>
-              <text value="Warning"/>
+              <text value=""/>
             </properties>
           </component>
         </children>
